# minimax-decoder

./: .gitignore  LICENSE  README.md  agents.py  benchmark.py  benchmark_results.json  colab_lfm_benchmark.ipynb  config.py  decoder.py  kaggle_halueval_benchmark.ipynb  main.py  models.py  pyproject.toml
data/: HaluEval_QA.csv
experiments/: __init__.py  run_slm_benchmark.py
notebooks/: kaggle_benchmark.ipynb  kaggle_halueval_benchmark.ipynb  run_gemini_vanilla.ipynb  run_lfm2_minimax.ipynb  run_lfm2_vanilla.ipynb  run_qwen_minimax.ipynb  run_qwen_vanilla.ipynb  run_smollm2_lfm2_adversary.ipynb  run_smollm2_minimax.ipynb  run_smollm2_qwen_adversary.ipynb  run_smollm2_vanilla.ipynb
providers/: __init__.py  base.py  gemini.py  groq.py  huggingface.py  local.py
results/: benchmark_qwen1.5b_vanilla.json  benchmark_smollm2-360m-local_gemini-flash.json  combined_results_gemini_vanilla.json  combined_results_smollm2_qwen_adversary.json  full_qwen1.5b_vanilla.json  full_smollm2_minimax.json  halueval_smollm2_minimax.json  lfm2_350m_minimax_full.json  mc_results_gemini_vanilla.json  mc_results_lfm2_minimax.json  mc_results_lfm2_vanilla.json  mc_results_qwen_vanilla.json  mc_results_smollm2_lfm2_adversary.json  mc_results_smollm2_minimax.json  mc_results_smollm2_qwen_adversary.json  mc_results_smollm2_vanilla.json  open_results_gemini_vanilla.json  open_results_smollm2_qwen_adversary.json
